--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <div>
           <ul class="contact list">
             <li>
-              <a class="contact-link link" href="mailto:info@devstudio.com"
+              <a class="contact link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a class="contact-link link" href="tel:+48111111111"
+              <a class="contact link" href="tel:+48111111111"
                 >+48 111 111 111</a
               >
             </li>
