--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,12 @@
         <div>
           <ul class="contact list">
             <li>
-              <a class="contact-link link" href="mailto:info@devstudio.com"
+              <a class="contact link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a class="contact-link link" href="tel:+48111111111"
+              <a class="contact link" href="tel:+48111111111"
                 >+48 111 111 111</a
               >
             </li>
@@ -55,7 +55,7 @@
       <section>
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
-          <ul class="filter list">
+          <ul class="filter list section">
             <li>
               <button type="button" class="button-filter">Wszystkie</button>
             </li>
@@ -68,7 +68,7 @@
               <button type="button" class="button-filter">Marketing</button>
             </li>
           </ul>
-          <ul class="portfolio-list list">
+          <ul class="portfolio-list list section">
             <div class="portfolio-grid">
               <li class="portfolio-item">
                 <img
@@ -77,8 +77,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="portfolio-name">Technocrack</h3>
-                <p class="portfolio-type">Strona internetowa</p>
+                <div class="border-portfolio-item">
+                  <h3 class="portfolio-name">Technocrack</h3>
+                  <p class="portfolio-type">Strona internetowa</p>
+                </div>
               </li>
               <li class="portfolio-item">
                 <img
@@ -87,10 +89,12 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="portfolio-name">
-                  Grafika New Orlean vs Golden Star
-                </h3>
-                <p class="portfolio-type">Dizajn</p>
+                <div class="border-portfolio-item">
+                  <h3 class="portfolio-name">
+                    Grafika New Orlean vs Golden Star
+                  </h3>
+                  <p class="portfolio-type">Dizajn</p>
+                </div>
               </li>
               <li class="portfolio-item">
                 <img
@@ -99,9 +103,10 @@
                   width="370"
                   height="294"
                 />
-
-                <h3 class="portfolio-name">Restauracja Seafood</h3>
-                <p class="portfolio-type">Aplikacja</p>
+                <div class="border-portfolio-item">
+                  <h3 class="portfolio-name">Restauracja Seafood</h3>
+                  <p class="portfolio-type">Aplikacja</p>
+                </div>
               </li>
               <li class="portfolio-item">
                 <img
@@ -110,8 +115,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="portfolio-name">Projekt Prime</h3>
-                <p class="portfolio-type">Marketing</p>
+                <div class="border-portfolio-item">
+                  <h3 class="portfolio-name">Projekt Prime</h3>
+                  <p class="portfolio-type">Marketing</p>
+                </div>
               </li>
               <li class="portfolio-item">
                 <img
@@ -120,8 +127,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="portfolio-name">Projekt Boxes</h3>
-                <p class="portfolio-type">Aplikacja</p>
+                <div class="border-portfolio-item">
+                  <h3 class="portfolio-name">Projekt Boxes</h3>
+                  <p class="portfolio-type">Aplikacja</p>
+                </div>
               </li>
               <li class="portfolio-item">
                 <img
@@ -130,8 +139,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="portfolio-name">Inspiration has no Borders</h3>
-                <p class="portfolio-type">Strona internetowa</p>
+                <div class="border-portfolio-item">
+                  <h3 class="portfolio-name">Inspiration has no Borders</h3>
+                  <p class="portfolio-type">Strona internetowa</p>
+                </div>
               </li>
               <li class="portfolio-item">
                 <img
@@ -140,8 +151,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="portfolio-name">Magazyn Limited Edition</h3>
-                <p class="portfolio-type">Dizajn</p>
+                <div class="border-portfolio-item">
+                  <h3 class="portfolio-name">Magazyn Limited Edition</h3>
+                  <p class="portfolio-type">Dizajn</p>
+                </div>
               </li>
               <li class="portfolio-item">
                 <img
@@ -150,8 +163,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="portfolio-name">Projekt LAB</h3>
-                <p class="portfolio-type">Marketing</p>
+                <div class="border-portfolio-item">
+                  <h3 class="portfolio-name">Projekt LAB</h3>
+                  <p class="portfolio-type">Marketing</p>
+                </div>
               </li>
               <li class="portfolio-item">
                 <img
@@ -160,6 +175,7 @@
                   width="370"
                   height="294"
                 />
+
                 <h3 class="portfolio-name">Growing Business</h3>
                 <p class="portfolio-type">Aplikacja</p>
               </li>
