--- a/portfolio.html
+++ b/portfolio.html
@@ -175,9 +175,10 @@
                   width="370"
                   height="294"
                 />
-
-                <h3 class="portfolio-name">Growing Business</h3>
-                <p class="portfolio-type">Aplikacja</p>
+                <div class="border-portfolio-item">
+                  <h3 class="portfolio-name">Growing Business</h3>
+                  <p class="portfolio-type">Aplikacja</p>
+                </div>
               </li>
             </div>
           </ul>
