--- a/index.html
+++ b/index.html
@@ -17,38 +17,31 @@
   <body>
     <header>
       <div class="container flex-nav-container">
-        <div class="flex-inside-nav">
-          <a class="logo" href="./index.html"
-            >Web<span class="logo-span">Studio</span></a
-          >
-          <nav>
-            <ul class="menu list">
-              <li>
-                <a class="contact-link link" href="./index.html">Agencja</a>
-              </li>
-              <li>
-                <a class="contact-link link" href="./portfolio.html"
-                  >Portfolio</a
-                >
-              </li>
-              <li><a class="contact-link link" href="#">Kontakt</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div>
-          <ul class="contact list">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <nav class="nav-menu">
+          <ul class="menu list">
             <li>
-              <a class="contact link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="contact-link link" href="./index.html">Agencja</a>
             </li>
             <li>
-              <a class="contact link" href="tel:+48111111111"
-                >+48 111 111 111</a
-              >
+              <a class="contact-link link" href="./portfolio.html">Portfolio</a>
             </li>
+            <li><a class="contact-link link" href="#">Kontakt</a></li>
           </ul>
-        </div>
+        </nav>
+
+        <ul class="contact-list list">
+          <li>
+            <a class="contact link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact link" href="tel:+48111111111">+48 111 111 111</a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -59,121 +52,115 @@
       <section class="advantages section">
         <div class="container">
           <h2 class="visually-hidden">Nasze atuty</h2>
-          <div class="flex-advantages">
-            <ul class="list">
-              <li>
-                <h3>LOREM IPSUM</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </p>
-              </li>
-              <li>
-                <h3>LOREM IPSUM</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </p>
-              </li>
+          <ul class="flex-advantages list">
+            <li>
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
 
-              <li>
-                <h3>LOREM IPSUM</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </p>
-              </li>
-              <li>
-                <h3>LOREM IPSUM</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                </p>
-              </li>
-            </ul>
-          </div>
+            <li>
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="activities section">
         <div class="container">
           <h2 class="section-name">Czym się zajmujemy</h2>
-          <div class="flex-activities">
-            <ul class="list">
-              <li>
-                <img
-                  src="images/1a.jpg"
-                  alt="człowiek pisze na klawiaturze"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li>
-                <img
-                  src="images/1b.jpg"
-                  alt="człowiek z telefonem w ręce"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li>
-                <img
-                  src="images/1c.jpg"
-                  alt="tablet z paletą kolorów"
-                  width="370"
-                  height="294"
-                />
-              </li>
-            </ul>
-          </div>
+          <ul class="flex-activities list">
+            <li>
+              <img
+                src="images/1a.jpg"
+                alt="człowiek pisze na klawiaturze"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/1b.jpg"
+                alt="człowiek z telefonem w ręce"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/1c.jpg"
+                alt="tablet z paletą kolorów"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
         </div>
       </section>
       <section class="team section">
         <div class="container">
           <h2 class="section-name">Nasz zespół</h2>
-          <div class="flex-team">
-            <ul class="list">
-              <li>
-                <img
-                  src="images/2a.jpg"
-                  alt="uśmiechnięty mężczyzna w okularach"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-position">Product Designer</p>
-              </li>
-              <li>
-                <img
-                  src="images/2b.jpg"
-                  alt="uśmiechnięta kobieta w okularach"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-position">Frontend Developer</p>
-              </li>
-              <li>
-                <img
-                  src="images/2c.jpg"
-                  alt="mężczyzna w niebieskiej koszuli"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-position">Marketing</p>
-              </li>
-              <li>
-                <img
-                  src="images/2d.jpg"
-                  alt="mężczyzna w okularach"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-position">UI Designer</p>
-              </li>
-            </ul>
-          </div>
+          <ul class="flex-team list">
+            <li>
+              <img
+                src="images/2a.jpg"
+                alt="uśmiechnięty mężczyzna w okularach"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">John Doe</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="images/2b.jpg"
+                alt="uśmiechnięta kobieta w okularach"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">John Doe</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="images/2c.jpg"
+                alt="mężczyzna w niebieskiej koszuli"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">John Doe</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="images/2d.jpg"
+                alt="mężczyzna w okularach"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">John Doe</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
