--- a/portfolio.html
+++ b/portfolio.html
@@ -17,38 +17,31 @@
   <body>
     <header>
       <div class="container flex-nav-container">
-        <div class="flex-inside-nav">
-          <a class="logo" href="./index.html"
-            >Web<span class="logo-span">Studio</span></a
-          >
-          <nav>
-            <ul class="menu list">
-              <li>
-                <a class="contact-link link" href="./index.html">Agencja</a>
-              </li>
-              <li>
-                <a class="contact-link link" href="./portfolio.html"
-                  >Portfolio</a
-                >
-              </li>
-              <li><a class="contact-link link" href="#">Kontakt</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div>
-          <ul class="contact list">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <nav class="nav-menu">
+          <ul class="menu list">
             <li>
-              <a class="contact link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="contact-link link" href="./index.html">Agencja</a>
             </li>
             <li>
-              <a class="contact link" href="tel:+48111111111"
-                >+48 111 111 111</a
-              >
+              <a class="contact-link link" href="./portfolio.html">Portfolio</a>
             </li>
+            <li><a class="contact-link link" href="#">Kontakt</a></li>
           </ul>
-        </div>
+        </nav>
+
+        <ul class="contact-list list">
+          <li>
+            <a class="contact link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact link" href="tel:+48111111111">+48 111 111 111</a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
