--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name">John Doe</h3>
-              <p class="team-position">Product Designer</p>
+              <div class="personal-data">
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li>
               <img
@@ -137,8 +139,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name">John Doe</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="personal-data">
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li>
               <img
@@ -147,8 +151,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name">John Doe</h3>
-              <p class="team-position">Marketing</p>
+              <div class="personal-data">
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -157,8 +163,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name">John Doe</h3>
-              <p class="team-position">UI Designer</p>
+              <div class="personal-data">
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
