--- a/portfolio.html
+++ b/portfolio.html
@@ -61,119 +61,102 @@
               <button type="button" class="button-filter">Marketing</button>
             </li>
           </ul>
-          <ul class="portfolio-list list section">
-            <div class="portfolio-grid">
-              <li class="portfolio-item">
-                <img
-                  src="images/3a.jpg"
-                  alt="laptop"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-portfolio-item">
-                  <h3 class="portfolio-name">Technocrack</h3>
-                  <p class="portfolio-type">Strona internetowa</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="images/3b.jpg"
-                  alt="zawodnicy koszykówki"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-portfolio-item">
-                  <h3 class="portfolio-name">
-                    Grafika New Orlean vs Golden Star
-                  </h3>
-                  <p class="portfolio-type">Dizajn</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="images/3c.jpg"
-                  alt="logo restauracji"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-portfolio-item">
-                  <h3 class="portfolio-name">Restauracja Seafood</h3>
-                  <p class="portfolio-type">Aplikacja</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="images/3d.jpg"
-                  alt="słuchawki"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-portfolio-item">
-                  <h3 class="portfolio-name">Projekt Prime</h3>
-                  <p class="portfolio-type">Marketing</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="images/3e.jpg"
-                  alt="pudełka"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-portfolio-item">
-                  <h3 class="portfolio-name">Projekt Boxes</h3>
-                  <p class="portfolio-type">Aplikacja</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="images/3f.jpg"
-                  alt="komputer"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-portfolio-item">
-                  <h3 class="portfolio-name">Inspiration has no Borders</h3>
-                  <p class="portfolio-type">Strona internetowa</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="images/3g.jpg"
-                  alt="magazyn"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-portfolio-item">
-                  <h3 class="portfolio-name">Magazyn Limited Edition</h3>
-                  <p class="portfolio-type">Dizajn</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="images/3h.jpg"
-                  alt="etykieta"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-portfolio-item">
-                  <h3 class="portfolio-name">Projekt LAB</h3>
-                  <p class="portfolio-type">Marketing</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="images/3i.jpg"
-                  alt="osoba pracuje na laptopie"
-                  width="370"
-                  height="294"
-                />
-                <div class="border-portfolio-item">
-                  <h3 class="portfolio-name">Growing Business</h3>
-                  <p class="portfolio-type">Aplikacja</p>
-                </div>
-              </li>
-            </div>
+          <ul class="portfolio-list portfolio-grid list section">
+            <li class="portfolio-item">
+              <img src="images/3a.jpg" alt="laptop" width="370" height="294" />
+              <div class="border-portfolio-item">
+                <h3 class="portfolio-name">Technocrack</h3>
+                <p class="portfolio-type">Strona internetowa</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="images/3b.jpg"
+                alt="zawodnicy koszykówki"
+                width="370"
+                height="294"
+              />
+              <div class="border-portfolio-item">
+                <h3 class="portfolio-name">
+                  Grafika New Orlean vs Golden Star
+                </h3>
+                <p class="portfolio-type">Dizajn</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="images/3c.jpg"
+                alt="logo restauracji"
+                width="370"
+                height="294"
+              />
+              <div class="border-portfolio-item">
+                <h3 class="portfolio-name">Restauracja Seafood</h3>
+                <p class="portfolio-type">Aplikacja</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="images/3d.jpg"
+                alt="słuchawki"
+                width="370"
+                height="294"
+              />
+              <div class="border-portfolio-item">
+                <h3 class="portfolio-name">Projekt Prime</h3>
+                <p class="portfolio-type">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="images/3e.jpg" alt="pudełka" width="370" height="294" />
+              <div class="border-portfolio-item">
+                <h3 class="portfolio-name">Projekt Boxes</h3>
+                <p class="portfolio-type">Aplikacja</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="images/3f.jpg"
+                alt="komputer"
+                width="370"
+                height="294"
+              />
+              <div class="border-portfolio-item">
+                <h3 class="portfolio-name">Inspiration has no Borders</h3>
+                <p class="portfolio-type">Strona internetowa</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="images/3g.jpg" alt="magazyn" width="370" height="294" />
+              <div class="border-portfolio-item">
+                <h3 class="portfolio-name">Magazyn Limited Edition</h3>
+                <p class="portfolio-type">Dizajn</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="images/3h.jpg"
+                alt="etykieta"
+                width="370"
+                height="294"
+              />
+              <div class="border-portfolio-item">
+                <h3 class="portfolio-name">Projekt LAB</h3>
+                <p class="portfolio-type">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="images/3i.jpg"
+                alt="osoba pracuje na laptopie"
+                width="370"
+                height="294"
+              />
+              <div class="border-portfolio-item">
+                <h3 class="portfolio-name">Growing Business</h3>
+                <p class="portfolio-type">Aplikacja</p>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
